# nta_event_svc

./: .env  API.md  alembic.ini  local.db  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 307c578ee48f_create_events_table.py  580b047cd286_add_created_at_and_updated_at_to_events.py
src/event_service/: database.py  main.py
src/event_service/api/: event.py
src/event_service/core/: config.py
src/event_service/models/: __init__.py  event.py
src/event_service/schemas/: __init__.py  event.py
src/event_service/services/: __init__.py  smtp.py
tests/: conftest.py  test_api_doc_notifications.py  test_api_md.py  test_event_api.py  test_event_model.py  test_event_schemas.py  test_event_update_notifications.py  test_smtp_service.py
